2007-02-16 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.ac: Bumped package version to 20070216.

	* RF_Amp/MSA-2643.sch, RF_Amp/Q1.sch, RF_Amp/Q2.sch,
	TwoStageAmp/TwoStageAmp.sch, gTAG/gTAG-jtagio.sch, gTAG/gTAG-psu.sch,
	gTAG/gTAG-ucont.sch, gTAG/gTAG.sch, lightning_detector/lightning.sch:
	Updated schematics to get rid of symbol warnings.

2007-2-10 Stuart Brorson <sdb@cloud9.net)
	* RF_Amp/MSA-2643.sch: Removed source attribute from 
	transistors since spice-sdb didn't like hierarchy.
	
2007-2-10 Stuart Brorson <sdb@cloud9.net>
        * TwoStageAmp/:  Various fixes to bit-rot problems.

2006-10-20 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Bumped package version to 20061020.

2006-09-24 Ales Hvezda   <ahvezda@geda.seul.org>

        * AUTHORS: Updated file pointing people at gschem's AUTHOR file 
        as the complete list of authors.  Merged all listed files in this
        file into gschem's file.

2006-09-06 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated program version to 20060906.

2006-08-30 Werner Hoch	<werner.ho@gmx.de>

	* configure.ac: fixed installation error. Install into docdir
	
	* */Makefile.am: changed for the installation

2006-08-21 Ales Hvezda   <ahvezda@geda.seul.org>

        * README: Updated the README a little to be ready for the next
        release.

2006-08-19 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Bumped version number to 20060821 in prep for the
        next gEDA/gaf release.

2006-01-16 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Bumped package version to 20060123

        * README: Updated for the new year and release.

2005-08-19 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Bumped the package version to 20050820 which will be
        a real snapshot.

2005-08-14 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated package version to 20050814.  This is a 